# alterator-browser

./: .gitignore  49-alterator.rules  ABInterfaces.md  AltCenter interfaces.md  CMakeLists.txt  Dockerfile  INSTALL.md  README.md  altcenter.spec  file_guide.md  list_altcenter.sh
.gear/: alt-diagnostic-tool.spec  altcenter.spec  altcenter.spec~  alterator-browser.spec  rules
backends/: adt-app.backend  applications.backend  auth.backend  categories.backend  control.backend  datetime.backend  domain-diag.backend  gpupdate.backend  groups.backend  license.backend  limits.backend  logs.backend  module_finder.backend  multiseat.backend  net-bl.backend  net-dnat.backend  net-eth.backend  net-iptables-manual.backend  net-iptables.backend  net-openvpn.backend  net-pppoe.backend  net-pptp.backend  net-shares.backend  net-tc.backend  net-wifi.backend  quota.backend  release-notes.backend  root.backend  script.sh  services.backend  sslkey.backend  (+7 more)
src/: CMakeLists.txt  categorywidget.cpp  categorywidget.h  en.ts  flowlayout.h  main.cpp  mainwindowsettings.cpp  pushbutton.cpp
src/aobuilder/: CMakeLists.txt  aobuilderimpl.cpp  aobuilderimpl.h  aobuilderinterface.h  constants.h
src/aobuilder/builders/: aobuilderimpl.cpp  aobuilderimpl.h  aobuilderinterface.h  baseobjectbuilder.cpp  baseobjectbuilder.h  categoryobjectbuilder.cpp  categoryobjectbuilder.h  diag1objectbuilder.cpp  diag1objectbuilder.h  legacycategoryobjectbuilder.cpp  legacycategoryobjectbuilder.h  legacyobjectbuilder.cpp  legacyobjectbuilder.h  localapplicationobjectbuilder.cpp  localapplicationobjectbuilder.h  newobjectbuilder.cpp  newobjectbuilder.h  objectbuilder.cpp  objectbuilder.h  objectbuilderfactory.cpp  objectbuilderfactory.h  objectbulderinterface.h
src/aobuilder/datasource/: datasourcedbusimpl.cpp  datasourcedbusimpl.h  datasourceinterface.h
src/aobuilder/objects/: basicobject.cpp  basicobject.h  category.cpp  category.h  diag1object.cpp  diag1object.h  legacyobject.cpp  legacyobject.h  localappobject.cpp  localappobject.h  object.cpp  object.h
src/aobuilder/parsers/: baseobjectparser.cpp  baseobjectparser.h  objectparserinterface.h
src/app/: CMakeLists.txt  abstractlocalinterfacemanager.cpp  abstractlocalinterfacemanager.h  abstractmodulemanager.cpp  abstractmodulemanager.h  accontroller.cpp  accontroller.h  acpushbutton.cpp  acpushbutton.h  adtapp.cpp  adtapp.h  adtexecutor.cpp  adtexecutor.h  alteratordatastorageitem.cpp  alteratordatastorageitem.h  app_en.ts  app_ru.ts  browserdelegate.cpp  browserdelegate.h  browserview.h  categoryproxymodel.cpp  categoryproxymodel.h  categorywidget.cpp  categorywidget.h  categorywidget.ui  clcontroller.cpp  clcontroller.h  constants.h  controller.cpp  controller.h  dbuschecker.cpp  dbuschecker.h  en.ts  flowlayout.cpp  flowlayout.h  icon.qrc  infodialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  (+19 more)
src/app/adtbuilderstrategies/: adtmodelbuilder.cpp  adtmodelbuilder.h  adtmodelbuilderstrategydbusinfodesktop.cpp  adtmodelbuilderstrategydbusinfodesktop.h  adtmodelbuilderstrategyinterface.cpp  adtmodelbuilderstrategyinterface.h
src/app/interfaces/: appcontrollerinterface.cpp  appcontrollerinterface.h  mainwindowcontrollerinterface.cpp  mainwindowcontrollerinterface.h  mainwindowinterface.cpp  mainwindowinterface.h  testswidgetinterface.cpp  testswidgetinterface.h  toolswidgetinterface.cpp  toolswidgetinterface.h
src/app/mainwindow/: clickablehighlightlabel.cpp  clickablehighlightlabel.h  detailsdialog.cpp  detailsdialog.h  detailsdialog.ui  doubleclickablelabel.cpp  doubleclickablelabel.h  maintestswidget.cpp  maintestswidget.h  maintestswidget.ui  maintoolswidget.cpp  maintoolswidget.h  maintoolswidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  statuscommonwidget.cpp  statuscommonwidget.h  statuscommonwidget.ui
src/app/model/: abstractacentity.cpp  abstractacentity.h  abstractentity.cpp  abstractentity.h  acapplication.cpp  acapplication.h  accategory.cpp  accategory.h  acinterface.cpp  acinterface.h  aclocalapllicationmodelbuilder.cpp  aclocalapllicationmodelbuilder.h  aclocalapplication.cpp  aclocalapplication.h  aclocalapplicationbuilder.cpp  aclocalapplicationbuilder.h  aclocalapplicationitem.cpp  aclocalapplicationitem.h  aclocalapplicationmodel.cpp  aclocalapplicationmodel.h  acmodel.cpp  acmodel.h  acobject.cpp  acobject.h  acobjectbuilder.cpp  acobjectbuilder.h  acobjectcategory.cpp  acobjectcategorybuilder.cpp  acobjectcategorybuilder.h  acobjectitem.cpp  acobjectitem.h  acobjectsmodelbuilder.cpp  acobjectsmodelbuilder.h  application.cpp  application.h  category.cpp  category.h  categorybuilder.cpp  categorybuilder.h  classDefinitions.h  (+42 more)
src/app/parser/: commandlineoptions.h  commandlineparser.cpp  commandlineparser.h
src/core/: CMakeLists.txt  adtdesktopfileparser.cpp  adtdesktopfileparser.h  adtexecutable.cpp  adtexecutable.h  adtjsonconverter.cpp  adtjsonconverter.h  alteratorexecutordbusinterface.h  common.h  core.h  enums.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  treemodelbuilderinterface.cpp  treemodelbuilderinterface.h  treemodelbulderfromexecutable.cpp  treemodelbulderfromexecutable.h
src/core/logger/: CMakeLists.txt  consolelogger.cpp  consolelogger.h  filelogger.cpp  filelogger.h  logger.cpp  logger.h  loggermanager.cpp  loggermanager.h  loggermessage.h  prelude.h  sysloglogger.cpp  sysloglogger.h
src/model/: CMakeLists.txt  basicobject.cpp  basicobject.h  category.cpp  category.h  categorybuilder.cpp  constants.h  desktopfileparser.cpp  legacyobject.cpp  legacyobject.h  legacyobjectbuilder.cpp  legacyobjectbuilder.h  localapllicationmodelbuilder.cpp  localapllicationmodelbuilder.h  localapplication.cpp  localapplication.h  localapplicationbuilder.cpp  localapplicationbuilder.h  localapplicationitem.cpp  localapplicationitem.h  localapplicationmodel.cpp  localapplicationmodel.h  localappobject.cpp  localappobject.h  model.cpp  model.h  object.cpp  object.h  objectbuilder.cpp  objectbuilderfactory.cpp  objectbuilderfactory.h  objectbuilderinterface.h  objectitem.h  objectsmodelbuilder.cpp  objectsmodelbuilder.h
(+26 files in other folders)
